--- a/src/Styles/Sass/main.scss
+++ b/src/Styles/Sass/main.scss
@@ -1,1 +1,6 @@
-@import './nav'
+@import 'global';
+@import './styles';
+@import './mix-ins';
+@import './library';
+@import './component-nav';
+@import './tubes';
