--- a/src/Styles/Sass/main.scss
+++ b/src/Styles/Sass/main.scss
@@ -2,5 +2,6 @@
 @import './styles';
 @import './mix-ins';
 @import './library';
+@import './navbar';
 @import './component-nav';
 @import './tubes';
