--- a/src/Styles/Css/main.css
+++ b/src/Styles/Css/main.css
@@ -107,6 +107,7 @@ header .username:hover {
 
 .loading-gif {
   position: absolute;
+  background-color: transparent;
   margin: 5% 0 0 0;
   top: 30%;
   left: 30%;
@@ -116,9 +117,14 @@ header .username:hover {
   transition: 500ms;
 }
 
+.loading-gif p {
+  color: white;
+  font-size: 14px;
+}
+
 .loading-gif img {
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
 }
 
 .navbar-main {
