--- a/src/Styles/Sass/_library.scss
+++ b/src/Styles/Sass/_library.scss
@@ -44,6 +44,7 @@
 
 .loading-gif{
     position: absolute;
+    background-color: transparent;
     margin: 5% 0 0 0;
     top: 30%;
     left: 30%;
@@ -51,8 +52,12 @@
     width: 40%;
     margin: 0 auto;
     transition: 500ms;
+    p{
+        color: white;
+        font-size: 14px;
+    }
     img{
-        height: 100%;
-        width: 100%;
+        height: 80%;
+        width: 80%;
     }
 }
