custom selects to tubes and webcams

--- a/src/Styles/Sass/_component-nav.scss
+++ b/src/Styles/Sass/_component-nav.scss
@@ -61,7 +61,7 @@
     overflow-y: hidden;
     cursor: pointer;
     z-index: 3;
-    top: 0;
+    top: 18%;
     h2{
         text-transform: capitalize;
     }
@@ -71,6 +71,7 @@
         }
         width: 100%;
         h2{
+
             font-size: 1.1em;
             padding: 5px;
         }
