--- a/src/Styles/Sass/main.scss
+++ b/src/Styles/Sass/main.scss
@@ -5,4 +5,5 @@
 @import './navbar';
 @import './component-nav';
 @import './tubes';
-@import './webcams'
+@import './webcams';
+@import './pornstars';
