--- a/src/Styles/Sass/_global.scss
+++ b/src/Styles/Sass/_global.scss
@@ -29,6 +29,7 @@ button{
     background-color: transparent;
     //width: 1200px;
     margin: 0 auto;
+    overflow-x: hidden;
     header{
         display: grid;
         grid-template-columns: 3fr 2fr;
