--- a/src/Styles/Sass/_webcams.scss
+++ b/src/Styles/Sass/_webcams.scss
@@ -8,12 +8,13 @@
     .webcams-grid{
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-gap: 10px;
+        grid-gap: 4px;
         padding: 5% 0 0 0;
         //opacity: 0;
         transition: 500ms;
         .webcam-div{
             position: relative ;
+            width: 100%;
             &::after{
                 content:attr(after);
                 position: absolute;
@@ -21,7 +22,7 @@
                 text-align: center;
                 bottom: 10%;
                 left: 10%;
-                width: 80%;
+                width: 90%;
                 color: white;
                 background-color: rgba(32, 6, 6, 0.644);
                 border-radius: 8px;
@@ -29,14 +30,15 @@
         .img-div{
             @include divTemplate();
             margin: 0 auto;
-            width: 90%;
+            width: 95%;
             height: 100%;
-            padding: 5px 5px 13px 5px;
-            
+            padding: 0 0 13px 0;
+            background-color: black;
+            overflow: hidden;
             img{
                 width: 100%;
                 height: 90%;
-                border-radius: 10px;
+                //border-radius: 10px;
             }
             p{
                 font-size: 18px;
